Share GMAIL listo, logs de utilizad, crash analytics y correciones de clase

--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="16dp"
         android:elevation="6dp"
         android:fontFamily="sans-serif"
-        android:text="Gmail"
+        android:text="@string/fab_gmail"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#ffffff"
         android:textStyle="bold"
@@ -58,7 +58,7 @@
         android:layout_marginEnd="16dp"
         android:elevation="6dp"
         android:fontFamily="sans-serif"
-        android:text="Whatsapp"
+        android:text="@string/fab_whatsapp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#ffffff"
         android:textStyle="bold"
@@ -87,7 +87,7 @@
         android:layout_marginEnd="16dp"
         android:elevation="6dp"
         android:fontFamily="sans-serif"
-        android:text="Facebook"
+        android:text="@string/fab_facebook"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#ffffff"
         android:textStyle="bold"
@@ -114,6 +114,7 @@
         android:id="@+id/quake_details_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:alpha="0.85"
         android:background="@color/colorPrimaryDark"
         android:elevation="5dp"
         android:visibility="gone"
