Cambios sobre el reporte de pre lanzamiento de google play, cambios en email, descripciones para ciegos y opacidades

--- a/app/src/main/res/layout/activity_invitation.xml
+++ b/app/src/main/res/layout/activity_invitation.xml
@@ -39,8 +39,9 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:text="@string/app_name"
-        android:textColor="@color/grey"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textColor="@color/grey"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
