--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -42,7 +42,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:background="@drawable/foto"
-                android:contentDescription="@string/imagen_toolbar"
+                android:foreground="#4D000000"
+                android:contentDescription="@string/imagen_toolbar_contact"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.5" />
