Correccion de floating button y correcion de share de facebook

--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -100,9 +100,10 @@
         android:id="@+id/fab_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:visibility="visible"
+        app:rippleColor="@color/colorPrimaryDark"
         app:backgroundTintMode="src_atop"
         app:elevation="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
