Se solicita instalacion en caso de no contar con app en la accion share

--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -138,6 +138,7 @@
             android:id="@+id/tool_bar_detail"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:contentDescription="@string/titulo_toolbar"
             app:layout_collapseMode="pin"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
