Cambios posteriores a reporte previo de google play

--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -16,6 +16,7 @@
         android:backgroundTint="#c71610"
         app:elevation="6dp"
         app:fabSize="mini"
+        android:contentDescription="@string/boton_flotante_gmail"
         app:layout_constraintBottom_toBottomOf="@+id/fab_share"
         app:layout_constraintEnd_toEndOf="@+id/fab_share"
         app:layout_constraintStart_toStartOf="@+id/fab_share"
@@ -45,6 +46,7 @@
         android:backgroundTint="#25D366"
         app:elevation="6dp"
         app:fabSize="mini"
+        android:contentDescription="@string/boton_flotante_whatsapp"
         app:layout_constraintBottom_toBottomOf="@+id/fab_share"
         app:layout_constraintEnd_toEndOf="@+id/fab_share"
         app:layout_constraintStart_toStartOf="@+id/fab_share"
@@ -74,6 +76,7 @@
         android:backgroundTint="#3b5998"
         app:elevation="6dp"
         app:fabSize="mini"
+        android:contentDescription="@string/boton_flotante_facebook"
         app:layout_constraintBottom_toBottomOf="@+id/fab_share"
         app:layout_constraintEnd_toEndOf="@+id/fab_share"
         app:layout_constraintStart_toStartOf="@+id/fab_share"
@@ -104,8 +107,9 @@
         android:layout_marginBottom="16dp"
         android:visibility="visible"
         app:rippleColor="@color/colorPrimaryDark"
+        android:contentDescription="@string/boton_compartir_sismo"
         app:backgroundTintMode="src_atop"
-        app:elevation="6dp"
+        app:elevation="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_share_24px" />
