--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -7,7 +7,7 @@
         />
     <corners android:radius="30dp" />
     <!--<solid android:color="@android:color/holo_blue_bright"/>-->
-    <solid android:color="@color/grey" />
+    <solid android:color="@color/grey_dark" />
 
 
 </shape>
