Rediseño de listado de sismos, cambios en activity detalle para animaciones suaves

--- a/app/src/main/res/layout/quake_cardview.xml
+++ b/app/src/main/res/layout/quake_cardview.xml
@@ -1,28 +1,19 @@
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
-    android:layout_marginBottom="4dp"
-    card_view:cardCornerRadius="4dp"
+    android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
+    android:clickable="true"
     android:elevation="0dp"
     android:focusable="true"
-    android:clickable="true"
-    android:foreground="?attr/selectableItemBackground"
-    style="@style/Widget.MaterialComponents.CardView"
-    >
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:foreground="?attr/selectableItemBackground">
 
         <ImageView
             android:id="@+id/iv_mag_color"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/circulo_pintado"
@@ -35,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textSize="14sp"
@@ -48,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textSize="12sp"
             card_view:layout_constraintBottom_toBottomOf="@+id/tv_ciudad"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintTop_toTopOf="@+id/tv_ciudad"
@@ -56,8 +49,9 @@
         <TextView
             android:id="@+id/tv_referencia"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="4dp"
             android:maxLines="1"
             android:paddingTop="0dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
@@ -75,7 +69,7 @@
             android:layout_height="wrap_content"
             android:maxLength="4"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="21sp"
             android:textStyle="normal"
             card_view:layout_constraintBottom_toBottomOf="@+id/iv_mag_color"
             card_view:layout_constraintEnd_toEndOf="@+id/iv_mag_color"
@@ -89,14 +83,25 @@
             android:layout_height="0dp"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="8dp"
+            android:contentDescription="@string/icono_sensible"
+            android:visibility="invisible"
             card_view:layout_constraintBottom_toBottomOf="@+id/tv_ciudad"
             card_view:layout_constraintEnd_toStartOf="@+id/tv_hora"
             card_view:layout_constraintHorizontal_bias="0.0"
             card_view:layout_constraintStart_toEndOf="@+id/tv_ciudad"
             card_view:layout_constraintTop_toTopOf="@+id/tv_ciudad"
-            card_view:srcCompat="@drawable/ic_warning_black_24dp"
-            android:visibility="invisible"
-            android:contentDescription="@string/icono_sensible" />
+            card_view:srcCompat="@drawable/ic_warning_black_24dp" />
 
-    </android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
+        <View
+            android:id="@+id/divider"
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="16dp"
+            android:background="?attr/dividerHorizontal"
+            android:visibility="visible"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            card_view:layout_constraintEnd_toEndOf="@+id/tv_hora"
+            card_view:layout_constraintStart_toStartOf="@+id/tv_referencia"
+            card_view:layout_constraintTop_toBottomOf="@+id/tv_referencia" />
+
+</android.support.constraint.ConstraintLayout>
