--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -218,8 +218,8 @@
 
             <ImageView
                 android:id="@+id/iv_mag_color_detail"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:contentDescription="@string/circulo_pintado"
@@ -233,6 +233,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="4dp"
                 android:fontFamily="sans-serif"
                 android:maxLines="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
@@ -266,7 +267,7 @@
                 android:layout_marginEnd="16dp"
                 android:fontFamily="sans-serif"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 android:transitionName="hora"
                 card_view:layout_constraintBottom_toBottomOf="@+id/tv_ciudad_detail"
                 card_view:layout_constraintEnd_toEndOf="parent"
@@ -278,6 +279,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="4dp"
                 android:fontFamily="sans-serif"
                 android:paddingTop="0dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
@@ -298,7 +300,7 @@
                 android:fontFamily="sans-serif"
                 android:maxLength="4"
                 android:textColor="@android:color/white"
-                android:textSize="18sp"
+                android:textSize="21sp"
                 android:textStyle="normal"
                 android:transitionName="magnitud"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_mag_color_detail"
