Se agrega estado preliminar y estado verificado en el listado de sismos

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorAccent">#00bbff</color>
     <color name="grey">#efefef</color>
     <color name="grey_dark">#939393</color>
+    <color name="green_dark">#008e4d</color>
 
 
     <!-- Colores para cada magnitud-->
