--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey"
-    tools:context=".QuakeDetailsActivity"
+    tools:context=".views.QuakeDetailsActivity"
     tools:layout_editor_absoluteY="25dp">
 
     <android.support.design.widget.FloatingActionButton
