--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -292,7 +292,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
                         android:layout_marginBottom="4dp"
+                        android:ellipsize="end"
                         android:fontFamily="sans-serif"
+                        android:maxLines="1"
                         android:paddingTop="0dp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Small"
                         android:textSize="14sp"
@@ -302,6 +304,7 @@
                         app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@+id/tv_ciudad_detail"
                         app:layout_constraintTop_toBottomOf="@+id/tv_ciudad_detail"
+                        app:layout_constraintVertical_bias="0.0"
                         tools:text="Referencia de la ciudad" />
 
 
