--- a/app/src/main/res/layout/quake_cardview.xml
+++ b/app/src/main/res/layout/quake_cardview.xml
@@ -56,6 +56,7 @@
             android:paddingTop="0dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textSize="14sp"
+            android:ellipsize="end"
             card_view:layout_constraintBottom_toBottomOf="@+id/iv_mag_color"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="@+id/tv_ciudad"
@@ -102,6 +103,6 @@
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="@+id/tv_hora"
             card_view:layout_constraintStart_toStartOf="@+id/tv_referencia"
-            card_view:layout_constraintTop_toBottomOf="@+id/tv_referencia" />
+            card_view:layout_constraintTop_toBottomOf="@+id/iv_mag_color" />
 
 </android.support.constraint.ConstraintLayout>
