--- a/app/src/main/res/layout/activity_quake_details.xml
+++ b/app/src/main/res/layout/activity_quake_details.xml
@@ -157,8 +157,8 @@
         android:fillViewport="true">
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.constraint.Guideline
                 android:id="@+id/izquierda"
