--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -18,7 +18,10 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="230dp"
+            android:fitsSystemWindows="true"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:expandedTitleGravity="bottom"
+            app:expandedTitleMarginBottom="?attr/actionBarSize"
             >
 
             <ImageView
@@ -38,16 +41,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
+                android:layout_gravity="top"
+                android:layout_marginBottom="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 />
 
-            <!--<android.support.design.widget.TabLayout
+            <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="bottom"
                 app:tabMode="fixed"
-                app:tabGravity="fill" />-->
+                app:tabGravity="fill" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
