--- a/app/src/main/res/layout/info_windows.xml
+++ b/app/src/main/res/layout/info_windows.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/circulo_pintado"
-        card_view:layout_constraintBottom_toBottomOf="@+id/textView"
+        card_view:layout_constraintBottom_toBottomOf="@+id/tv_iw_hora"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="@+id/tv_iw_referencia"
         card_view:srcCompat="@drawable/circle_shape" />
@@ -52,16 +52,16 @@
         tools:text="9.5" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_iw_hora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hace: 1 d 2 h"
         android:textSize="10sp"
-        card_view:layout_constraintStart_toStartOf="@+id/textView2"
-        card_view:layout_constraintTop_toBottomOf="@+id/textView2" />
+        card_view:layout_constraintStart_toStartOf="@+id/tv_iw_profundaid"
+        card_view:layout_constraintTop_toBottomOf="@+id/tv_iw_profundaid" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_iw_profundaid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profundidad: 55km"
@@ -70,20 +70,20 @@
         card_view:layout_constraintTop_toBottomOf="@+id/tv_iw_referencia" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/iv_iw_estado"
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="4dp"
-        card_view:layout_constraintBottom_toBottomOf="@+id/textView3"
-        card_view:layout_constraintEnd_toStartOf="@+id/textView3"
+        card_view:layout_constraintBottom_toBottomOf="@+id/tv_iw_estado"
+        card_view:layout_constraintEnd_toStartOf="@+id/tv_iw_estado"
         card_view:layout_constraintHorizontal_chainStyle="packed"
         card_view:layout_constraintStart_toStartOf="parent"
-        card_view:layout_constraintTop_toTopOf="@+id/textView3"
+        card_view:layout_constraintTop_toTopOf="@+id/tv_iw_estado"
         card_view:srcCompat="@drawable/ic_baseline_check_circle_24px" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_iw_estado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -94,7 +94,7 @@
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toEndOf="@+id/tv_iw_referencia"
         card_view:layout_constraintHorizontal_bias="0.5"
-        card_view:layout_constraintStart_toEndOf="@+id/imageView"
-        card_view:layout_constraintTop_toBottomOf="@+id/textView" />
+        card_view:layout_constraintStart_toEndOf="@+id/iv_iw_estado"
+        card_view:layout_constraintTop_toBottomOf="@+id/tv_iw_hora" />
 
 </android.support.constraint.ConstraintLayout>
