Fin de implementación de mapa
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/layout/info_windows.xml
+++ b/app/src/main/res/layout/info_windows.xml
@@ -85,7 +85,8 @@
         card_view:layout_constraintHorizontal_chainStyle="packed"
         card_view:layout_constraintStart_toStartOf="parent"
         card_view:layout_constraintTop_toTopOf="@+id/tv_iw_estado"
-        card_view:srcCompat="@drawable/ic_baseline_check_circle_24px" />
+        card_view:srcCompat="@drawable/ic_baseline_check_circle_24px"
+        android:contentDescription="@string/imagen_estado_sismo" />
 
     <TextView
         android:id="@+id/tv_iw_estado"
